fix(jms): added java option for fixed jms listener error;